fix: change th z-index to 1

--- a/index.styl
+++ b/index.styl
@@ -25,7 +25,7 @@ fixed-table-header($height) {
   th {
     position: sticky
     top: 0
-    z-index: 4 // 1 less than v-overflow
+    z-index: 1
   }
 
   tr.v-datatable__progress {
